<resources>
    <string name="app_name">NutritionApp</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Логин</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_register">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_register">Нет аккаунта? <u><font color="#0000FF">Зарегистрируйтесь</font></u></string>

    <string name="home">Главный</string>
    <string name="add_food">Добавить</string>
    <string name="profile">Профиль</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="calories">%1$s ккал</string>
    <string name="grams">%1$s гр</string>
    <string name="isDoctor">Я врач</string>
    <string name="diary_header">Дневник приемов пищи</string>
    <string name="nutrition">Состав блюда\n%1$s</string>
    <string name="save">Сохранить</string>
    <string name="serving_size_hint">Введите новый размер порции</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="version">Версия приложения 1.0</string>
    <string name="last_update">Последнее обновление 13.05.2024</string>
</resources>